# personal-trainer

./: .gitignore  README.md  app.py  fast_api_test.py  package.json  pyproject.toml  requirements.txt  speaker.py  vercel.json
FastAPI/: fast_api_test.py  main.py
FastAPI/templates/: index.html
_old/: 3b1b.py  app.py
_old/data/: README.md
frontend/: .firebaserc  .gitignore  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/assets/css/: base.css  excerciseCard.css  home.css  index.css  memoPage.css  nav.css  profile.css  progressbar.css  quizview.css  table.css
frontend/src/components/: BadgeView.vue  Camera.vue  ExcerciseCard.vue  HelloWorld.vue  LoginCard.vue  NavBar.vue  ParticlesVue.vue  ProgressCard.vue  TableVue.vue  TestFirebase.vue
frontend/src/composables/: camera_utils.ts  quiz.ts  time_utils.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: AboutView.vue  ExcerciseView.vue  ExerciseView.vue  HomeView.vue  IndexView.vue  MemoView.vue  ProfileView.vue  WebCamView.vue
